crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_subgraphs_tb.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: natural
---

        ╭─Frontend────────────────────────────╮
        │                                     │
        │ ┌────────────┐   ┌────────────────┐ │
        │ │ Browser UI │   │ Service Worker │ │
        │ └────────────┘   └────────────────┘ │
        │        └──────┐ ┌─────────┘         │
        ╰───────────────┼─┼───────────────────╯
                        │ │
                        │ │
                        │ │
                        │ │
                        │ │
                        │ │
                ╭─Backen┼─┼────╮
                │       │ │    │
                │ ┌─────▾─▾──┐ │
                │ │ REST API │ │
                │ └──────────┘ │
                │       │      │
                │       │      │
                │       │      │
                │       │      │
                │       │      │
                │ ╭─────▾────╮ │
                │ │ ──────── │ │
                │ │ Postgres │ │
                │ ╰──────────╯ │
                │              │
                ╰──────────────╯
