crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_subgraphs_tb.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---

        ╭─Frontend────────────────────────────╮
        │                                     │
        │ ┌────────────┐   ┌────────────────┐ │
        │ │ Browser UI │   │ Service Worker │ │
        │ └────────────┘   └────────────────┘ │
        │        └──────┐ ┌─────────┘         │
        ╰───────────────┼─┼───────────────────╯
                        │ │
                        │ │
                        │ │
                        │ │
                        │ │
                        │ │
                ╭─Backend─┼────╮
                │       │ │    │
                │ ┌─────▾─▾──┐ │
                │ │ REST API │ │
                │ └──────────┘ │
                │       │      │
                │       │      │
                │       │      │
                │       │      │
                │       │      │
                │ ╭─────▾────╮ │
                │ │ ──────── │ │
                │ │ Postgres │ │
                │ ╰──────────╯ │
                │              │
                ╰──────────────╯
