crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_supervisor_bidirectional.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: natural
---
 ╭─Supervisor───────────╮
 │     panics           │
 │ ┌─────────┐          │
 │▸│ Factory ││         │
 ││└─────────┘│         │
 │└─────creates         │
 │┌──────────┼┘         │
 ││┌────────┐│          │
 │▸│ Worker ││   beat  ┌│──────────┐       ┌──────────┐
 │ └────────┘─────────▸│ Heartbeat │──────▸│ Watchdog │
 │                     └│──────────┘       └──────────┘
 ╰──────────────────────╯
