crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_supervisor_bidirectional.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---
 ╭─Supervisor───────────╮
 │     panics           │
 │ ┌─────────┐          │
 │▸│ Factory ││         │
 ││└─────────┘│         │
 │└─────creates         │
 │┌──────────┼┘         │
 ││┌────────┐│          │
 │▸│ Worker │     beat  │       ┌───────────┐       ┌──────────┐
 │ └────────┘───────────┼──────▸│ Heartbeat │──────▸│ Watchdog │
 │                      │       └───────────┘       └──────────┘
 ╰──────────────────────╯
