crates/mermaid-text/tests/regression_corpus/snapshots/state_anonymous_choice.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: natural
---






                                   ╭──────╮          ╭──────╮
                                 ┌▸│ Pass │─────────▸│ Done │────────┐
                                 │ ╰──────╯          ╰──────╯        │
                                 │                                   │
                                 │                                   │
                                 │                                   │
              ╱────────────╲  ok │ ╭──────╮                          │
             ▸│ named_cond │─────┘▸│ Fail ││                         │
             │╲────────────╱──────┘╰──────╯│                         │╭───────╮
╭─────╮      │                 error       └─────────────────────────▸│╭─────╮│
(  ●  )──────┘                                                       ▸││  ●  ││
╰─────╯──────┐                                                       ▸│╰─────╯│
             │╱──╲       start     ╭──────╮                         ┌▸╰───────╯
             ▸│  │────────stop────▸│ Open │─────────────────────────┼┘
              ╲──╱────────────────┐╰──────╯                         │
                                  │                                 │
                                  │                                 │
                                  │                                 │
                                  │╭────────╮                       │
                                  ▸│ Closed │───────────────────────┘
                                   ╰────────╯
