crates/mermaid-text/tests/regression_corpus/snapshots/state_anonymous_choice.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---






                                   ╭──────╮          ╭──────╮
                                 ┌▸│ Pass │─────────▸│ Done │────────┐
                                 │ ╰──────╯          ╰──────╯        │
                                 │                                   │
                                 │                                   │
                                 │                                   │
              ╱────────────╲  ok │ ╭──────╮                          │
             ▸│ named_cond │─────┘▸│ Fail ││                         │
             │╲────────────╱──────┘╰──────╯│                         │╭───────╮
╭─────╮      │                 error       └─────────────────────────▸│╭─────╮│
(  ●  )──────┘                                                       ▸││  ●  ││
╰─────╯──────┐                                                       ▸│╰─────╯│
             │╱──╲       start     ╭──────╮                         ┌▸╰───────╯
             ▸│  │────────stop────▸│ Open │─────────────────────────┼┘
              ╲──╱────────────────┐╰──────╯                         │
                                  │                                 │
                                  │                                 │
                                  │                                 │
                                  │╭────────╮                       │
                                  ▸│ Closed │───────────────────────┘
                                   ╰────────╯
