crates/mermaid-text/tests/regression_corpus/snapshots/state_basic_machine.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
                                    ╭─────────╮       pause
                                   ▸│ Running │──────────────┐
                                   │╰────▴────╯              │
                            start  │     ┴───┐               │
╭─────╮       ╭──────╮─────────────┘     └───┼┐              │╭────────╮
(  ●  )──────▸│ Idle │                       ││              ▸│ Paused │
╰─────╯       ╰───▴──╯─────────────┐╭───────╮││               ╰────────╯
                  │                ││╭─────╮│││                    ┘
                  │                ▸││  ●  ││││                    │
                  │                 │╰─────╯│││                    │
                  │                 ╰───────╯││                 resume
                  └──────────────────────────┘└────────────────────┘
                                           stop
