crates/mermaid-text/tests/regression_corpus/snapshots/state_basic_machine.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 80
expression: constrained
---
                                    ╭─────────╮       pause
                                   ▸│ Running │──────────────┐
                                   │╰────▴────╯              │
                            start  │     ┴───┐               │
╭─────╮       ╭──────╮─────────────┘     └───┼┐              │╭────────╮
(  ●  )──────▸│ Idle │                       ││              ▸│ Paused │
╰─────╯       ╰───▴──╯─────────────┐╭───────╮││               ╰────────╯
                  │                ││╭─────╮│││                    ┘
                  │                ▸││  ●  ││││                    │
                  │                 │╰─────╯│││                    │
                  │                 ╰───────╯││                 resume
                  └──────────────────────────┘└────────────────────┘
                                           stop
