crates/mermaid-text/tests/regression_corpus/snapshots/state_choice_fork_join.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: natural
---






                                    ╭────────╮
                                   ▸│ Cached │──────┐
                                   │╰────────╯      │╭───────╮
╭─────╮       ╱─────────────╲   hit│                ││╭─────╮│
(  ●  )──────▸│ route_check │───miss                ▸││  ●  ││
╰─────╯       ╲─────────────╱──────┐                 │╰─────╯│
                                   │╭────────╮      ▸╰───────╯
                                   ▸│ Origin │──────┘
                                    ╰────────╯
