crates/mermaid-text/tests/regression_corpus/snapshots/state_choice_fork_join.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---






                                    ╭────────╮
                                   ▸│ Cached │──────┐
                                   │╰────────╯      │╭───────╮
╭─────╮       ╱─────────────╲   hit│                ││╭─────╮│
(  ●  )──────▸│ route_check │───miss                ▸││  ●  ││
╰─────╯       ╲─────────────╱──────┐                 │╰─────╯│
                                   │╭────────╮      ▸╰───────╯
                                   ▸│ Origin │──────┘
                                    ╰────────╯
