crates/mermaid-text/tests/regression_corpus/snapshots/state_circuit_breaker.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: natural
---






                                                      ╭─────────────────────────────────────────────╮
                                                      │ DB calls skipped (sleep for probe interval) │                   probe interval elapsed
                                                     ▸│             No writes attempted             │───────────────────────────────────────┐
╭─────╮       ╭───────────────────────────────╮      │╰──────────────────────▴──────────────────────╯                                       │╭────────────────────────────────╮
(  ●  )──────┐│   All DB calls pass through   │───5 consecutive failures─────┼──────────────────────────────────────────────────────────────▸│ One probe call allowed through │
╰─────╯      ▸│ Counting consecutive failures │──────┘                       │                                                               ╰────────────────┬───────────────╯
              ╰───────────────▴───────────────╯                              │                                       probe fails (increased backoff)          ┴
                                                                             └────────────────────────────────────────────────────────────────────────────────┘
                               probe succeeds
