crates/mermaid-text/tests/regression_corpus/snapshots/state_circuit_breaker.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 80
expression: constrained
---
                                    ╭─────────────────────╮
                                    │  DB calls skipped   │
           ╭───────────────────╮    │  (sleep for probe   │                  probe interval elapsed
           │ All DB calls pass │   ▸│      interval)      │────────────────────────────────────┐
╭─────╮    │      through      │   ││ No writes attempted │                                    │╭─────────────────╮
(  ●  )───▸│     Counting      │───┴╰──────────▴──────────╯────────────────────────────────────┼│ One probe call  │
╰─────╯    │    consecutive    │ 5 consecutive failures                                        ▸│ allowed through │
           │     failures      │               │                                                ╰─────────────────╯
           ╰─────────▴─────────╯               │                                          probe fails (increased backoff)
                                               └─────────────────────────────────────────────────────────┘
                      probe succeeds
